test/errors/delete_undefined.correct
error: delete_undefined.li:1:8: cannot delete variable 'undefined_var' it is not defined
│ delete undefined_var;
│ ~~~~~~~~~~~~~~~~~~~~
│        ^
